--- a/Assert.Test/Assert.Test.csproj
+++ b/Assert.Test/Assert.Test.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
     <AssemblyName>XspecT.Assert.Test</AssemblyName>
     <RootNamespace>XspecT.Assert.Test</RootNamespace>
   </PropertyGroup>
