--- a/VisualStudioExtension/VisualStudioExtension.csproj
+++ b/VisualStudioExtension/VisualStudioExtension.csproj
@@ -45,8 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CreateTest.cs" />
+    <Compile Include="SpecifyCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubjectInfo.cs" />
     <Compile Include="VisualStudioExtensionPackage.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -76,7 +77,7 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\CreateTest.png" />
+    <Content Include="Resources\SpecifyCommand.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
